--- a/can_i_publish/libel/templates/libel/summary.html
+++ b/can_i_publish/libel/templates/libel/summary.html
@@ -4,7 +4,20 @@
 
   <h3>Summary</h3>
 
-  <p>There will be a summary here.</p>
+  <p>There will be a summary here:</p>
+  <ol>
+    <li>A history of the questions asked</li>
+    <li>the answer to each question</li>
+  </ol>
+
   <p>The last card was <a href="{% url 'card' last_card %}">{{ last_card }}</a>.</p>
+
+<!--   The path of the choices (questions answered) will give us the summary
+  ex:
+
+  Q1 | <Q1 text> | <Q1 answer/choice>
+
+  can publish status
+  -->
 
 {% endblock %}
