added init static files; working with python backend history function

--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -5,45 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Libel</title>
 
-  <!-- TEMP -->
-  <style>
-    .container {
-      margin: 20px auto;
-      width:  600px;
-    }
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
-    table,
-    td {
-      border: 1px dashed gray;
-      border-collapse: collapse;
-      box-sizing: border-box;
-      padding: 10px;
-    }
-
-    table {
-      width:  100%;
-    }
-
-    td:first-of-type {
-      width:  25%;
-    }
-
-    td {
-      width:  75%;
-    }
-  </style>
 </head>
 <body>
   <div class="container">
     <h1>Can I Publish This?</h1>
     <h2>Libel</h2>
 
-    <!-- could be a nav -->
+    <!-- could be a nav here -->
 
     {% block content %}{% endblock %}
 
-    <footer><a href="{% url 'index' %}">start over</a></footer>
+    <footer>
+      {% if card.card_slug != 'Q1' %}
+      <a href="{% url 'index' %}">start over</a>
+      {% endif %}
+    </footer>
+
   </div>
+
+  <script src="{% static 'main.js' %}"></script>
 
 </body>
 </html>
