added separate module for functions only

--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -20,7 +20,7 @@
 
     <footer>
       {% if card.card_slug != 'Q1' %}
-      <a href="{% url 'index' %}">start over</a>
+      <a href="{% url 'card' 'Q1' %}">start over</a>
       {% endif %}
     </footer>
 
