we have a working history system.

--- a/can_i_publish/libel/templates/libel/card.html
+++ b/can_i_publish/libel/templates/libel/card.html
@@ -66,8 +66,8 @@
       <td>{{ card_history.path }}</td>
     </tr>
     <tr>
-      <td>Current Card</td>
-      <td>{{ card_history.current_card }}</td>
+      <td>History</td>
+      <td>{{ card_history.history }}</td>
     </tr>
   </table>
 
