--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -26,7 +26,7 @@
 
   </div>
 
-  <script src="{% static 'main.js' %}"></script>
+  <script src="{% static 'main.js' %}?v=15"></script>
 
 </body>
 </html>
