added some display info

--- a/can_i_publish/libel/templates/libel/summary.html
+++ b/can_i_publish/libel/templates/libel/summary.html
@@ -15,6 +15,9 @@
   <p>Here is a summary of the route you took: {{ card_history.history }}</p>
 
 <!--   The path of the choices (questions answered) will give us the summary
+
+  need the question choice/answer as part of the history
+
   ex:
 
   Q1 | <Q1 text> | <Q1 answer/choice>
