--- a/can_i_publish/libel/templates/libel/card.html
+++ b/can_i_publish/libel/templates/libel/card.html
@@ -80,7 +80,12 @@
     </tr>
     <tr>
       <td>History</td>
-      <td>{{ card_history.history }}</td>
+      <td>
+        {% for card in card_history.history %}
+          In card {{ card }} you chose [answer].<br>
+        {% endfor %}
+        {{ card_history.history }}
+      </td>
     </tr>
     {% if card.card_slug != 'Q1' %}
     <tr>
