--- a/can_i_publish/libel/templates/libel/summary.html
+++ b/can_i_publish/libel/templates/libel/summary.html
@@ -4,25 +4,32 @@
 
   <h3>Summary</h3>
 
-  <p>There will be a summary here:</p>
-  <ol>
-    <li>A history of the questions asked</li>
-    <li>the answer to each question</li>
-  </ol>
-
-  <p>The last card was <a href="{% url 'card' last_card %}">{{ last_card }}</a>.</p>
-
-  <p>Here is a summary of the route you took: {{ card_history.history }}</p>
-
-<!--   The path of the choices (questions answered) will give us the summary
-
-  need the question choice/answer as part of the history
-
-  ex:
-
-  Q1 | <Q1 text> | <Q1 answer/choice>
-
-  can publish status
-  -->
+  <table>
+    <tr>
+      <td>Last Card</td>
+      <td>
+        <button
+          class="choice"
+          data-choice="{{ last_card }}">
+          back to {{ last_card }}
+        </button>
+    </tr>
+    {% for slug, answer in answers.items %}
+    <tr>
+      <td>{{ slug }}</td>
+      <td>{{ answer }}</td>
+    </tr>
+    {% endfor %}
+    <tr>
+      <td>Reset Button</td>
+      <td>
+        <button
+          class="choice"
+          data-choice="Q1">
+          start over
+        </button>
+      </td>
+    </tr>
+  </table>
 
 {% endblock %}
