have a working metrics grid

--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -6,7 +6,7 @@
   <title>Libel</title>
 
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220418a">
 
 </head>
 <body>
