disabled the history from recording back button hits; seems to solve the issue with duplicate metrics tallies. new metrics data in db.

--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -18,7 +18,7 @@
 
   </div>
 
-  <script src="{% static 'main.js' %}?v=20220418"></script>
+  <script src="{% static 'main.js' %}?v=20220419i"></script>
 
 </body>
 </html>
