ref folder with front end graphics idea; setup initial npm task manager

--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -6,7 +6,7 @@
   <title>Libel</title>
 
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220418a">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.min.css' %}?v=20220419">
 
 </head>
 <body>
@@ -18,7 +18,7 @@
 
   </div>
 
-  <script src="{% static 'main.js' %}?v=20220419i"></script>
+  <script src="{% static 'main.min.js' %}?v=20220419"></script>
 
 </body>
 </html>
