--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Libel</title>
+  <title>Can I Publish This?</title>
 
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'normalize.min.css' %}?v=8.0.1">
   <!-- TODO: use min file once the styles are complete -->
-  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220419a">
+  <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}?v=20220420c">
 
 
 </head>
