--- a/can_i_publish/libel/static/style.css
+++ b/can_i_publish/libel/static/style.css
@@ -1,3 +1,63 @@
+body {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
+.container {
+  background-color: #ffffff;
+  margin: 0 auto;
+  padding: 24px;
+  width: 600px;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+}
+
+header {
+  text-align: center;
+}
+
+.card {
+  background-color: #ffffff;
+  border: 1px dotted rgba(0, 0, 0, 0.3);
+  box-sizing: border-box;
+  margin: 0 auto;
+  min-height: 600px;
+  padding: 24px;
+  width: 400px;
+}
+.card .question_txt {
+  color: #25b3fb;
+}
+
+button {
+  cursor: pointer;
+}
+
+.choice_buttons button {
+  background-color: #ffffff;
+  border: 1px dotted #7A898D;
+  border-radius: 8px;
+  color: #7A898D;
+  display: block;
+  margin: 24px 0;
+  min-height: 40px;
+  width: 100%;
+}
+
+.start_over_button button {
+  background-color: #25b3fb;
+  border: 0;
+  border-radius: 8px;
+  color: #ffffff;
+  display: block;
+  margin: 24px 0;
+  min-height: 40px;
+  width: 100%;
+}
 
 /*# sourceMappingURL=style.css.map */
