--- a/can_i_publish/libel/static/style.css
+++ b/can_i_publish/libel/static/style.css
@@ -14,6 +14,7 @@ body {
 h1,
 h2,
 h3 {
+  color: #25b3fb;
   margin: 0;
 }
 
@@ -25,10 +26,12 @@ header {
   background-color: #ffffff;
   border: 1px dotted rgba(0, 0, 0, 0.3);
   box-sizing: border-box;
+  height: auto;
   margin: 0 auto;
-  min-height: 600px;
-  padding: 24px;
   width: 400px;
+}
+.card .card_content {
+  padding: 24px;
 }
 .card .question_txt {
   color: #25b3fb;
@@ -48,6 +51,11 @@ button {
   min-height: 40px;
   width: 100%;
 }
+.choice_buttons button:focus {
+  background-color: #25b3fb;
+  border: 1px solid #ffffff;
+  color: #ffffff;
+}
 
 .start_over_button button {
   background-color: #25b3fb;
@@ -58,6 +66,25 @@ button {
   margin: 24px 0;
   min-height: 40px;
   width: 100%;
+}
+
+.continue_button_section button {
+  background-color: #25b3fb;
+  border: 0;
+  bottom: 0;
+  color: #ffffff;
+  display: block;
+  height: 80px;
+  position: relative;
+  width: 100%;
+}
+
+.is_hidden {
+  visibility: hidden;
+}
+
+.is_visible {
+  visibility: visible;
 }
 
 /*# sourceMappingURL=style.css.map */
