linted and use min js file

--- a/can_i_publish/libel/templates/libel/_base.html
+++ b/can_i_publish/libel/templates/libel/_base.html
@@ -29,8 +29,7 @@
 
   </div><!-- /container -->
 
-  <!-- TODO: use min file in production -->
-  <script src="{% static 'main.js' %}?v=20220422f"></script>
+  <script src="{% static 'main.min.js' %}?v=20220422"></script>
 
 </body>
 </html>
